--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
-    "brotli": "^1.3.3",
+    "brotli-wasm": "^3.0.1",
     "bunyan": "^1.8.15",
     "bunyan-blackhole": "^1.1.1",
     "ethers": "^5.7.2",
