--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@uniswap/smart-order-router",
+  "name": "@web3auth/smart-order-router",
   "version": "3.40.0",
-  "description": "Uniswap Smart Order Router",
+  "description": "Web3Auth Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/smart-order-router.git"
+    "url": "https://github.com/Web3Auth/smart-order-router.git"
   },
   "license": "GPL",
   "keywords": [],
