--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@uniswap/swap-router-contracts": "^1.3.1",
     "@uniswap/token-lists": "^1.0.0-beta.31",
     "@uniswap/universal-router": "^1.6.0",
-    "@uniswap/universal-router-sdk": "file:/tmp/universal-router-sdkpackage.tgz",
+    "@uniswap/universal-router-sdk": "^3.0.2",
     "@uniswap/v2-sdk": "^4.3.2",
     "@uniswap/v3-sdk": "^3.13.0",
     "@uniswap/v4-sdk": "^1.0.0",
